--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -88,7 +88,7 @@ p {
     background-color: #000;
     position: relative;
     overflow: hidden;
-    background: url("../public/abc.png") no-repeat center center;
+    background: url("../public/images/abc.png") no-repeat center center;
     background-size: cover;
     z-index: 2;
 
